--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ var red = [
   {name: "Medical Center",       lat: 39.000062, lng: -77.096948, dist:  9.2366},
   {name: "Bethesda",             lat: 38.984431, lng: -77.094151, dist: 10.3286},
   {name: "Friendship Heights",   lat: 38.960997, lng: -77.085767, dist: 12.0140},
-  {name: "Tenleytown–AU",        lat: 38.947849, lng: -77.079299, dist: 12.9902},
-  {name: "Van Ness–UDC",         lat: 38.944519, lng: -77.063716, dist: 13.8610},
+  {name: "Tenleytown-AU",        lat: 38.947849, lng: -77.079299, dist: 12.9902},
+  {name: "Van Ness-UDC",         lat: 38.944519, lng: -77.063716, dist: 13.8610},
   {name: "Cleveland Park",       lat: 38.935852, lng: -77.058624, dist: 14.5222},
   {name: "Woodley Park",         lat: 38.925000, lng: -77.052350, dist: 15.3477},
   {name: "Dupont Circle",        lat: 38.911129, lng: -77.044428, dist: 16.4008},
@@ -44,9 +44,9 @@ var red = [
   {name: "Gallery Place",        lat: 38.898354, lng: -77.021527, dist: 18.0633},
   {name: "Judiciary Square",     lat: 38.896121, lng: -77.016312, dist: 18.3848},
   {name: "Union Station",        lat: 38.897770, lng: -77.006402, dist: 18.9286},
-  {name: "NoMa–Gallaudet U",     lat: 38.907413, lng: -77.002981, dist: 19.6180},
+  {name: "NoMa-Gallaudet U",     lat: 38.907413, lng: -77.002981, dist: 19.6180},
   {name: "Rhode Island Avenue",  lat: 38.920778, lng: -76.995682, dist: 20.6176},
-  {name: "Brookland–CUA",        lat: 38.933232, lng: -76.994474, dist: 21.4801},
+  {name: "Brookland-CUA",        lat: 38.933232, lng: -76.994474, dist: 21.4801},
   {name: "Fort Totten",          lat: 38.951808, lng: -77.001864, dist: 22.8282},
   {name: "Takoma",               lat: 38.975432, lng: -77.017421, dist: 24.6706},
   {name: "Silver Spring",        lat: 38.993658, lng: -77.032307, dist: 26.1699},
@@ -57,36 +57,36 @@ var red = [
 var geoDisplay = true;
 
 function switchDisplay() {
-  if (geoDisplay) {showDist();}
-  else            {showGeo();}
+  if (geoDisplay) {showDist(800);}
+  else            {showGeo(800);}
   geoDisplay = !geoDisplay;
   }
 
-function showDist() {
+function showDist(duration) {
   d3.select("svg").selectAll("circle")
     .data(red)
     .transition()
-    .duration(800)
+    .duration(duration)
     .attr("cx", function (d) {return distScale(d.dist);})
     .attr("cy", function (d) {return displayScale(1);});
   d3.select("svg").selectAll("path")
     .data(red)
     .transition()
-    .duration(800)
+    .duration(duration)
     .attr("d", function () {return distline(red);});
   }
 
-function showGeo() {
+function showGeo(duration) {
   d3.select("svg").selectAll("circle")
     .data(red)
     .transition()
-    .duration(800)
+    .duration(duration)
     .attr("cx", function (d) {return lngScale(d.lng);})
     .attr("cy", function (d) {return latScale(d.lat);});
   d3.select("svg").selectAll("path")
     .data(red)
     .transition()
-    .duration(800)
+    .duration(duration)
     .attr("d", function () {return geoline(red);});
   }
 
@@ -120,7 +120,6 @@ var distline = d3.svg.line()
   .y(function(d) {return displayScale(1);})
   .interpolate("linear");
 g.append("path")
-  .attr("d", function(d) {return geoline(red)})
   .style("stroke-width", 15)
   .style("stroke", "red")
   .style("fill", "none");
@@ -128,13 +127,12 @@ g.selectAll("MetroStations")
   .data(red)
   .enter()
   .append("svg:circle")
-  .attr("cx", function (d) {return lngScale(d.lng);})
-  .attr("cy", function (d) {return latScale(d.lat);})
   .attr("r", 12)
   .style("stroke-width", 3)
   .style("stroke", "black")
   .style("fill", "white")
   .append("svg:title")
   .text(function(d) {return d.name;});
+showGeo(0);
 </script>
 </html>
