--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ svg {
   height: 100%;
   }
 </style>
-<script src="http://d3js.org/d3.v2.min.js"></script>
+<script src="https://d3js.org/d3.v2.min.js"></script>
 </head>
 <body onclick="switchDisplay()">
 </body>
